@@ -23,3 +23,5 @@ libaudio_la_SOURCES =	\
 
 EXTRA_DIST = 		\
 	README
+
+CLEANFILES = *~
