@@ -18,3 +18,5 @@ libmididrv_la_SOURCES =	\
 
 EXTRA_DIST = 		\
 	README
+
+CLEANFILES = *~
