@@ -1,3 +1,7 @@
+2000-12-09  Tristan Tarrant <nadir@users.sourceforge.net>
+
+	* */Makefile.am: add a CLEANFILES def to all files
+
 2000-12-07  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* mapedit: VERY rudimentary start of a GTK shape browser.
